--- a/posts/Sri Rajan had a fight with his sister and Bhagwan through evolution in Biology taught him how to raise above his sisters actions.qmd
+++ b/posts/Sri Rajan had a fight with his sister and Bhagwan through evolution in Biology taught him how to raise above his sisters actions.qmd
@@ -1,6 +1,6 @@
 ---
 title: 110 - Sri Rajan had a fight with his sister and Bhagwan through evolution in Biology taught him how to raise above his sisters actions
-author: Story of Sri KankavelRajan
+author: KankavelRajan
 date: "07/01/2020"
 categories: [Conversation, sannidhi street]
 ---
